--- a/src/epub/text/book-3.xhtml
+++ b/src/epub/text/book-3.xhtml
@@ -7,7 +7,7 @@
 	</head>
 	<body epub:type="bodymatter z3998:non-fiction">
 		<section id="book-3" epub:type="chapter">
-			<h2>Book III</h2>
+			<h2 epub:type="title z3998:roman">III</h2>
 			<h3>Life of Plato</h3>
 			<p>Plato was the son of Ariston and Perictione or Potone, and a citizen of Athens; and his mother traced her family back to Solon; for Solon had a brother named Dropidas, who had a son named Critias, who was the father of Callæschrus, who was the father of that Critias who was one of the thirty tyrants, and also of Glaucon, who was the father of Charmides and Perictione. And she became the mother of Plato by her husband Ariston, Plato being the sixth in descent from Solon. And Solon traced his pedigree up to Neleus and Neptune. They say too that on the father’s side, he was descended from Codrus, the son of Melanthus, and they too are said by Thrasylus to derive their origin from Neptune. And Speusippus, in his book which is entitled the Funeral Banquet of Plato, and Clearchus in his Panegyric on Plato, and Anaxilides in the second book of his History of Philosophers, say that the report at Athens was that Perictione was very beautiful, and that Ariston endeavoured to violate her and did not succeed; and that he, after he had desisted from his violence saw a vision of Apollo in a dream, in consequence of which he abstained from approaching his wife till after her confinement.</p>
 			<p>And Plato was born, as Apollodorus says in his Chronicles, in the eighty-eighth Olympiad, on the seventh day of the month Thargelion, on which day the people of Delos say that Apollo also was born. And he died, as Hermippus says, at a marriage feast, in the first year of the hundred and eighth Olympiad, having lived eighty-one years. But Neanthes says that he was eighty-four years of age at his death. He is then younger than Isocrates by six years; for Isocrates was born in the archonship of Lysimachus, and Plato in that of Aminias, in which year Pericles died.</p>
@@ -452,7 +452,7 @@
 				<p>
 					<span>Phœbus, to bless mankind, became the father</span>
 					<span>Of Æsculapius, and of god-like Plato;</span>
-					<span><i>That</i> one to heal the body, <i>this</i> the mind.</span>
+					<span><em>That</em> one to heal the body, <em>this</em> the mind.</span>
 					<span>Now, from a marriage feast he’s gone to heaven,</span>
 					<span>To realize the happy city there,</span>
 					<span>Which he has planned fit for the realms of Jove.</span>
