[Editorial] endeavour -> endeavor

--- a/src/epub/text/book-9.xhtml
+++ b/src/epub/text/book-9.xhtml
@@ -404,7 +404,7 @@
 						<span>And no man ever will.</span>
 					</p>
 				</blockquote>
-				<p>And Zeno endeavours to put an end to the doctrine of motion by saying: “The object moved does not move either in the place in which it is, or in that in which it is not.” Democritus, too, discards the qualities, where he says: what is cold is cold in opinion, and what is hot is hot in opinion; but atoms and the vacuum exist in reality. And again he says: “But we know nothing really; for truth lies in the bottom.” Plato, too, following them, attributes the knowledge of the truth to the Gods and to the sons of the Gods, and leaves men only the investigation of probability. And Euripides says:⁠—</p>
+				<p>And Zeno endeavors to put an end to the doctrine of motion by saying: “The object moved does not move either in the place in which it is, or in that in which it is not.” Democritus, too, discards the qualities, where he says: what is cold is cold in opinion, and what is hot is hot in opinion; but atoms and the vacuum exist in reality. And again he says: “But we know nothing really; for truth lies in the bottom.” Plato, too, following them, attributes the knowledge of the truth to the Gods and to the sons of the Gods, and leaves men only the investigation of probability. And Euripides says:⁠—</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>Who now can tell whether to live may not</span>
