[Editorial] favour -> favor

--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -222,7 +222,7 @@
 						<span>Did he thus die among his choice companions?</span>
 						<span>There was a field of beans; and so the sage,</span>
 						<span>Died in the common road of Agrigentum,</span>
-						<span>Rather than trample down his favourite beans.</span>
+						<span>Rather than trample down his favorite beans.</span>
 					</p>
 				</blockquote>
 				<p>And he flourished about the sixtieth olympiad; and his system lasted for nine or ten generations. And the last of the Pythagoreans, whom Aristoxenus knew, were Xenophilus, the Chalcidean, from Thrace; and Phanton, the Phliasian, and Echecrates, and Diodes, and Polymnestus, who were also Phliasians, and they were disciples of Philolaus and Eurytus, of Tarentum.</p>
@@ -362,7 +362,7 @@
 					</p>
 				</blockquote>
 				<p>And others assert that it is the composition of Simonides.</p>
-				<p>But afterwards Empedocles abolished the assembly of a thousand, and established a council in which the magistrates were to hold office for three years, on such a footing that it should consist not only of rich men, but of those who were favourers of the interests of the people. Timæus, however, in his first and second book (for he often mentions him), says that he appeared to entertain opinions adverse to a republic. And, as far as his poetry goes, anyone may see that he was arrogant and self-satisfied. Accordingly, he says:⁠—</p>
+				<p>But afterwards Empedocles abolished the assembly of a thousand, and established a council in which the magistrates were to hold office for three years, on such a footing that it should consist not only of rich men, but of those who were favorers of the interests of the people. Timæus, however, in his first and second book (for he often mentions him), says that he appeared to entertain opinions adverse to a republic. And, as far as his poetry goes, anyone may see that he was arrogant and self-satisfied. Accordingly, he says:⁠—</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<div class="verse indent9">Hail to ye,</div>
