[Editorial] apophthegm -> apothegm

--- a/src/epub/text/book-8.xhtml
+++ b/src/epub/text/book-8.xhtml
@@ -452,7 +452,7 @@
 						<span>Whom hospitable Syracuse has crowned.</span>
 					</p>
 				</blockquote>
-				<p>He has left behind him Commentaries in which he treats of natural philosophy, and delivers apophthegms, and discusses medicine. He has also added brief notes to many of his commentaries, in which he declares plainly that he is the author of the works.</p>
+				<p>He has left behind him Commentaries in which he treats of natural philosophy, and delivers apothegms, and discusses medicine. He has also added brief notes to many of his commentaries, in which he declares plainly that he is the author of the works.</p>
 				<p>He died at the age of ninety years.</p>
 			</section>
 			<section id="part-8-4">
