[Editorial] catalogue -> catalog

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -67,7 +67,7 @@
 			</section>
 			<section id="part-1-2">
 				<h3>Life of Thales</h3>
-				<p>Thales, then, as Herodotus and Duris and Democritus say, was the son of Euxamius and Cleobule; of the family of the Thelidae, who are Phoenicians by descent, among the most noble of all the descendants of Cadmus and Agenor, as Plato testifies. And he was the first man to whom the name of Wise was given, when Damasius was Archon at Athens, in whose time also the seven wise men had that title given to them, as Demetrius Phalereus records in his <i epub:type="se:name.publication.book">Catalogue of the Archons</i>. He was enrolled as a citizen at Miletus when he came thither with Neleus, who had been banished from Phoenicia; but a more common statement is that he was a native Milesian, of noble extraction.</p>
+				<p>Thales, then, as Herodotus and Duris and Democritus say, was the son of Euxamius and Cleobule; of the family of the Thelidae, who are Phoenicians by descent, among the most noble of all the descendants of Cadmus and Agenor, as Plato testifies. And he was the first man to whom the name of Wise was given, when Damasius was Archon at Athens, in whose time also the seven wise men had that title given to them, as Demetrius Phalereus records in his <i epub:type="se:name.publication.book">Catalog of the Archons</i>. He was enrolled as a citizen at Miletus when he came thither with Neleus, who had been banished from Phoenicia; but a more common statement is that he was a native Milesian, of noble extraction.</p>
 				<p>After having been immersed in state affairs he applied himself to speculations in natural philosophy; though, as some people state, he left no writings behind him. For the book on <i epub:type="se:name.publication.book">Naval Astronomy</i> which is attributed to him is said in reality to be the work of Phocus the Samian. But Callimachus was aware that he was the discoverer of the Lesser Bear; for in his Iambics he speaks of him thus:</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
@@ -222,7 +222,7 @@
 						<span>And wipe off this our present infamy.</span>
 					</p>
 				</blockquote>
-				<p>He also persuaded them to take possession of the Thracian Chersonesus, and in order that it might appear that the Athenians had got possession of Salamis not by force alone, but also with justice, he opened some tombs, and showed that the corpses buried in them were all turned towards the east, according to the Athenian fashion of sepulture; likewise the tombs themselves all looked east, and the titles of the boroughs to which the dead belonged were inscribed on them, which was a custom peculiar to the Athenians. Some also say that it was he who added to the catalogue of Homer, after the lines:⁠—</p>
+				<p>He also persuaded them to take possession of the Thracian Chersonesus, and in order that it might appear that the Athenians had got possession of Salamis not by force alone, but also with justice, he opened some tombs, and showed that the corpses buried in them were all turned towards the east, according to the Athenian fashion of sepulture; likewise the tombs themselves all looked east, and the titles of the boroughs to which the dead belonged were inscribed on them, which was a custom peculiar to the Athenians. Some also say that it was he who added to the catalog of Homer, after the lines:⁠—</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
 						<span>With these appear the Salaminian bands,</span>
