[Editorial] valour -> valor

--- a/src/epub/text/book-1.xhtml
+++ b/src/epub/text/book-1.xhtml
@@ -711,7 +711,7 @@
 				<p>And Ion, the Chian, says of him:⁠—</p>
 				<blockquote epub:type="z3998:poem">
 					<p>
-						<span>Adorned with valour while alive, and modesty,</span>
+						<span>Adorned with valor while alive, and modesty,</span>
 						<span class="i1">Now that he’s dead he still exists in peace;</span>
 						<span>For, like the wise Pythagoras, he studied</span>
 						<span class="i1">The manners and the minds of many nations.</span>
