--- a/src/epub/text/endnotes.xhtml
+++ b/src/epub/text/endnotes.xhtml
@@ -97,7 +97,7 @@
 					<p>The Greek is, <i xml:lang="grc">ἐν τῷ πρὸς Ξενοφῶντα ἀποστασίου</i>⁠—“<i xml:lang="grc">ἀποστασίου δίκη</i>, an action against a freedman for having forsaken or slighted his <i xml:lang="grc">προστάτης</i>.”⁠—Liddle &amp; Scott, <i epub:type="se:name.publication.book">Greek Lexicon</i> <a href="book-2.xhtml#noteref-23" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-24" epub:type="endnote">
-					<p>This is exactly the character that Horace gives of him:⁠—<a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a></p>
+					<p>This is exactly the character that Horace gives of him: <a href="book-2.xhtml#noteref-24" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
 							<span>Omnis Aristippum decuit color et status et res;</span>
@@ -111,13 +111,13 @@
 				</li>
 				<li id="note-26" epub:type="endnote">
 					<p>The French translator gives the following examples, to show what is meant by these several kinds of quibbling arguments:</p>
-					<p>The <em>lying</em> one is this:⁠—Is the man a liar who says that he tells lies. If he is, then he does not tell lies; and if he does not tell lies, is he a liar?</p>
-					<p>The <em>concealed</em> one:⁠—Do you know this man who is concealed? If you do not, you do not know your own father; for he it is who is concealed.</p>
+					<p>The <em>lying</em> one is this: Is the man a liar who says that he tells lies. If he is, then he does not tell lies; and if he does not tell lies, is he a liar?</p>
+					<p>The <em>concealed</em> one: Do you know this man who is concealed? If you do not, you do not know your own father; for he it is who is concealed.</p>
 					<p>The <em>veiled</em> one is much the same as the preceding.</p>
 					<p>The <em>electra</em> is a quibble of the same kind as the two preceding ones: Electra sees Orestes: she knows that Orestes is her brother, but does not know that the man she sees is Orestes; therefore she does know, and does not know, her brother at the same time.</p>
 					<p>The <em>Sorites</em> is universally known.</p>
 					<p>The <em>bald</em> one is a kind of Sorites; pulling one hair out of a man’s head will not make him bald, nor two, nor three, and so on till every hair in his head is pulled out.</p>
-					<p>The <em>horned</em> one:⁠—You have what you have not lost. You have not lost horns, therefore you have horns. <a href="book-2.xhtml#noteref-26" epub:type="backlink">↩</a></p>
+					<p>The <em>horned</em> one: You have what you have not lost. You have not lost horns, therefore you have horns. <a href="book-2.xhtml#noteref-26" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-27" epub:type="endnote">
 					<p>From <i xml:lang="grc">ἐλέγχω</i>, to confute. <a href="book-2.xhtml#noteref-27" epub:type="backlink">↩</a></p>
@@ -170,7 +170,7 @@
 					<p>This is a quotation from the Hippolytus of Euripides, <span epub:type="z3998:roman">v</span>. 424. <a href="book-4.xhtml#noteref-41" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-42" epub:type="endnote">
-					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are:⁠—<a href="book-4.xhtml#noteref-42" epub:type="backlink">↩</a></p>
+					<p>I doubt if the wit of these parodies will be appreciated by the modern reader. The lines of Homer, which they are intended to parody, are: <a href="book-4.xhtml#noteref-42" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
 							<span>Ὦ μάκαρ Ατρεΐδη, μοιρηγενὲς, ὀλβιοδαίμων</span>
@@ -183,14 +183,14 @@
 						</p>
  <cite><i epub:type="se:name.publication.poem">Iliad</i> <span epub:type="z3998:roman">v</span> 146.</cite>
 					</blockquote>
-					<p>The first of which is translated by Pope:⁠—</p>
+					<p>The first of which is translated by Pope: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>Oh, blest Atrides, born of prosperous fate,</span>
 							<span>Successful monarch of a mighty state!</span>
 						</p>
 					</blockquote>
-					<p>The Greek parody in the text is:⁠—</p>
+					<p>The Greek parody in the text is: </p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
 							<span>Ὦ πέπον Ἀρχύτα, ψαλληγενὲς, ὀλβιότυφε</span>
@@ -323,7 +323,7 @@
 							<span>Εὖ δ’ οἶκος εἴς τ’ αὖ πόλεμον ἰσχύει μέγα.</span>
 						</p>
 					</blockquote>
-					<p>Which may be translated:⁠—</p>
+					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>Wisdom it is which regulates both cities,</span>
@@ -348,7 +348,7 @@
 							<span>Ἐσθλὸς δ’ αὖ κἀκεῖνος ὃς αὐτὸς πάντα νοήσῃ.</span>
 						</p>
 					</blockquote>
-					<p>The lines in Hesiod are:⁠—</p>
+					<p>The lines in Hesiod are: </p>
 					<blockquote epub:type="z3998:poem" xml:lang="grc">
 						<p>
 							<span>Κεῖνος μὲν πανάριστος ὃς αὐτὸς πάντα νοήσῃ</span>
@@ -367,7 +367,7 @@
  <p><a href="book-7.xhtml#noteref-83" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-84" epub:type="endnote">
-					<p>Huerner thinks (as indeed is evident) that something is lost here; and proposes to read the sentence thus:⁠—<i xml:lang="grc">Τῶν δὲ κατηγορημάτων τὰ μέν ἐστι συμβάματα ὡς τὸ πλεῖν, οἷον Σωκράτης πλεῖ, τὰ δὲ παρασυμβάματα ὡς τὸ διὰ πέτρας πλεῖν</i>. With reference to which passage, Liddell and Scott, <i epub:type="se:name.publication.book">Greek and English Lexicon</i> <abbr>voc.</abbr> <i xml:lang="grc">σύμβαμα</i>, thus speak: “<i xml:lang="grc">σύμβαμα</i> … as a philosophical term of the Stoics = <i xml:lang="grc">κατηγόρημα</i>, a complete predicament such as is an intransitive verb: <abbr>e.g.</abbr> <i xml:lang="grc">Σωκράτης περιπατεῖ</i>; while an imperfect verb was regarded as an incomplete predicament; <abbr>e.g.</abbr> <i xml:lang="grc">Σωκράτει μέλει</i>, and called <i xml:lang="grc">παρασύμβαμα</i>, or <i xml:lang="grc">παρακατηγόρημα</i>.” <a href="book-7.xhtml#noteref-84" epub:type="backlink">↩</a></p>
+					<p>Huerner thinks (as indeed is evident) that something is lost here; and proposes to read the sentence thus: <i xml:lang="grc">Τῶν δὲ κατηγορημάτων τὰ μέν ἐστι συμβάματα ὡς τὸ πλεῖν, οἷον Σωκράτης πλεῖ, τὰ δὲ παρασυμβάματα ὡς τὸ διὰ πέτρας πλεῖν</i>. With reference to which passage, Liddell and Scott, <i epub:type="se:name.publication.book">Greek and English Lexicon</i> <abbr>voc.</abbr> <i xml:lang="grc">σύμβαμα</i>, thus speak: “<i xml:lang="grc">σύμβαμα</i> … as a philosophical term of the Stoics = <i xml:lang="grc">κατηγόρημα</i>, a complete predicament such as is an intransitive verb: <abbr>e.g.</abbr> <i xml:lang="grc">Σωκράτης περιπατεῖ</i>; while an imperfect verb was regarded as an incomplete predicament; <abbr>e.g.</abbr> <i xml:lang="grc">Σωκράτει μέλει</i>, and called <i xml:lang="grc">παρασύμβαμα</i>, or <i xml:lang="grc">παρακατηγόρημα</i>.” <a href="book-7.xhtml#noteref-84" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-85" epub:type="endnote">
 					<p>This line is from the <i epub:type="se:name.publication.play">Inachus</i> of Sophocles (one of his lost plays). <a href="book-7.xhtml#noteref-85" epub:type="backlink">↩</a></p>
@@ -453,7 +453,7 @@
 						</p>
  <cite>Horace, <i epub:type="se:name.publication.poem">Satires</i> <span epub:type="z3998:roman">i</span> 130.</span>
 					</blockquote>
-					<p>Which may be translated:⁠—</p>
+					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>If every man is rich who’s wise,</span>
@@ -487,7 +487,7 @@
 					<p>See Herodotus <span epub:type="z3998:roman">iv</span> 93. <a href="book-8.xhtml#noteref-107" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-108" epub:type="endnote">
-					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say:⁠—<a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a></p>
+					<p>This resembles the account which Ovid puts into the mouth of Pythagoras, in the last book of his <i epub:type="se:name.publication.poem">Metamorphoses</i>, where he makes him say: <a href="book-8.xhtml#noteref-108" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
 							<span>Morte carent animæ, semperque priore relicta</span>
@@ -499,7 +499,7 @@
 							<span>Nuper Abanteïs templo Junonis in Argis.</span>
 						</p>
 					</blockquote>
-					<p>Which may be translated:⁠—</p>
+					<p>Which may be translated: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>Death has no pow’r th’ immortal soul to slay;</span>
@@ -535,7 +535,7 @@
 							<span>Illic sera rubens accendit lumina Vesper.</span>
 						</p>
 					</blockquote>
-					<p>Thus translated by Dryden, <span epub:type="z3998:roman">l</span> 338:⁠—</p>
+					<p>Thus translated by Dryden, <span epub:type="z3998:roman">l</span> 338: </p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>There, as they say, perpetual night is found,</span>
@@ -557,10 +557,10 @@
 					<p>From <i xml:lang="grc">παύω</i>, to cause to cease, <i xml:lang="grc">ἀνία</i>, sorrow. <a href="book-8.xhtml#noteref-115" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-116" epub:type="endnote">
-					<p>It is impossible to give the force of this epigram in any other language. It is a pun on <i xml:lang="grc">Ἄκρων</i>, <i xml:lang="grc">Ἀκράγας</i>, and <i xml:lang="grc">ἄκρος</i>. The last word meaning not only <i>high</i>, <i>lofty</i>, but also <i>eminent</i>, <i>very skillful</i>. The plain English would be:⁠—“The lofty height of a most eminent country conceals Acron, a skillful physician of Acragas, the son of a skillful father.” The variation would be:⁠—“A high tomb on a very high summit, conceals,” <abbr>etc.</abbr> <a href="book-8.xhtml#noteref-116" epub:type="backlink">↩</a></p>
+					<p>It is impossible to give the force of this epigram in any other language. It is a pun on <i xml:lang="grc">Ἄκρων</i>, <i xml:lang="grc">Ἀκράγας</i>, and <i xml:lang="grc">ἄκρος</i>. The last word meaning not only <i>high</i>, <i>lofty</i>, but also <i>eminent</i>, <i>very skillful</i>. The plain English would be: “The lofty height of a most eminent country conceals Acron, a skillful physician of Acragas, the son of a skillful father.” The variation would be: “A high tomb on a very high summit, conceals,” <abbr>etc.</abbr> <a href="book-8.xhtml#noteref-116" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-117" epub:type="endnote">
-					<p>This story is mentioned by Horace:⁠—<a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a></p>
+					<p>This story is mentioned by Horace: <a href="book-8.xhtml#noteref-117" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
 							<span class="i2">Siculique poetæ,</span>
@@ -608,7 +608,7 @@
 					<p>Namely, reasoning well, expressing one’s self well, and acting well. <a href="book-9.xhtml#noteref-129" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-130" epub:type="endnote">
-					<p>This is thus embodied by Lucretius:⁠—<a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a></p>
+					<p>This is thus embodied by Lucretius: <a href="book-9.xhtml#noteref-130" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem" xml:lang="la">
 						<p>
 							<span>Nam nihil e nihilo, in nihilum nîl posse reverti.</span>
@@ -628,7 +628,7 @@
 					<p>Homer, <i epub:type="se:name.publication.book">Iliad</i> <span epub:type="z3998:roman">xx</span>. 248. Pope’s version, 294. <a href="book-9.xhtml#noteref-134" epub:type="backlink">↩</a></p>
 				</li>
 				<li id="note-135" epub:type="endnote">
-					<p>There is too remarkable a similarity in this to Campbell’s lines:⁠—<a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
+					<p>There is too remarkable a similarity in this to Campbell’s lines: <a href="book-9.xhtml#noteref-135" epub:type="backlink">↩</a></p>
 					<blockquote epub:type="z3998:poem">
 						<p>
 							<span>’Tis distance lends enchantment to the view,</span>
